[gd_scene load_steps=8 format=3 uid="uid://co6h5le8jfhnd"]

[ext_resource type="Script" uid="uid://brla0a6t08457" path="res://levels.gd" id="1_hbfth"]
[ext_resource type="Texture2D" uid="uid://bcknecosj581f" path="res://addons/c3e0093c-7a14-4904-83af-b9c722dfa83d.png" id="2_02xe8"]
[ext_resource type="FontFile" uid="uid://cjj7cfw4lp3ck" path="res://Fuentes/28 Days Later.ttf" id="3_xv4fl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b0aun"]
bg_color = Color(0, 0.2, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x8mww"]
bg_color = Color(0, 0.2, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ci5qh"]
bg_color = Color(0, 0.2, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_04tao"]
bg_color = Color(0, 0.2, 0, 0.8)

[node name="levels" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hbfth")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_02xe8")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.61875
anchor_top = 0.299074
anchor_right = 0.963021
anchor_bottom = 0.732407
offset_right = -0.000244141
offset_bottom = -117.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 28

[node name="level1" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 14
theme_override_fonts/font = ExtResource("3_xv4fl")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxFlat_b0aun")
text = "nivel 1
"

[node name="level2" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("3_xv4fl")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxFlat_x8mww")
text = "Nivel 2"

[node name="level3" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("3_xv4fl")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxFlat_ci5qh")
text = "nivel 3"

[node name="level4" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("3_xv4fl")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxFlat_ci5qh")
text = "Nivel 4"

[node name="level5" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("3_xv4fl")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxFlat_ci5qh")
text = "Nivel 5"

[node name="EXIT" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 15
mouse_filter = 1
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("3_xv4fl")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxFlat_04tao")
text = "ESCAPE"

[connection signal="pressed" from="TextureRect/VBoxContainer/level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/level1" to="TextureRect/VBoxContainer/level1" method="_on_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/level1" to="TextureRect/VBoxContainer/EXIT" method="_on_play_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/level3" to="TextureRect/VBoxContainer/level1" method="_on_op_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/level3" to="TextureRect/VBoxContainer/EXIT" method="_on_op_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/level4" to="TextureRect/VBoxContainer/level1" method="_on_op_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/level4" to="TextureRect/VBoxContainer/EXIT" method="_on_op_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/level5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/level5" to="TextureRect/VBoxContainer/level1" method="_on_op_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/level5" to="TextureRect/VBoxContainer/EXIT" method="_on_op_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/EXIT" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/EXIT" to="TextureRect/VBoxContainer/level1" method="_on_exit_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/EXIT" to="TextureRect/VBoxContainer/EXIT" method="_on_pressed"]
