extends Control


func _on_exit_pressed() -> void:
	get_tree().change_scene_to_file("res://menu.tscn")


func _on_level_1_pressed() -> void:
	get_tree().change_scene_to_file("res://svgame.tscn")
	


func _on_level_2_pressed() -> void:
	pass # Replace with function body.


func _on_level_3_pressed() -> void:
	pass # Replace with function body.


func _on_level_4_pressed() -> void:
	pass # Replace with function body.


func _on_level_5_pressed() -> void:
	pass # Replace with function body.
